Doc/force-app/main/default/objects/Opportunity/fields/Does_firm_monitor_DMS__c.field-meta.xml
<CustomField>
    <fullName>Does_firm_monitor_DMS__c</fullName>
    <description>Does the firm monitor the DMS, Time Entry and other systems for suspicious activity?</description>
    <inlineHelpText>Does the firm monitor the DMS, Time Entry and other systems for suspicious activity?</inlineHelpText>
    <label>Does firm monitor DMS?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>