Doc/force-app/main/default/objects/Opportunity/fields/Does_firm_process_PHIHIPAA_information__c.field-meta.xml
<CustomField>
    <fullName>Does_firm_process_PHIHIPAA_information__c</fullName>
    <description>Does the firm regularly process PHI (HIPAA-protected information)?</description>
    <inlineHelpText>Does the firm regularly process PHI (HIPAA-protected information)?</inlineHelpText>
    <label>Does firm process PHI/HIPAA information?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>