Doc/force-app/main/default/objects/Opportunity/fields/Don_t_send_At_Risk_Notification__c.field-meta.xml
<CustomField>
    <fullName>Don_t_send_At_Risk_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Part of Technical Debt Project: Week 5 fields (Expiring May 11)</description>
    <inlineHelpText>Check this option if you do not want the notification to be sent when adding/removing a renewal opportunity to/from the At Risk list.</inlineHelpText>
    <label>Don&apos;t send @ Risk Notif&apos;n(Exp May 11)</label>
    <type>Checkbox</type>
</CustomField>