Doc/force-app/main/default/objects/Opportunity/fields/Early_Launch_Expected_Deployment_Date__c.field-meta.xml
<CustomField>
    <fullName>Early_Launch_Expected_Deployment_Date__c</fullName>
    <description>When does the customer expect this software to be deployed?

Part of Technical Debt Project: Week 6 fields (Expiring May 18)</description>
    <inlineHelpText>When does the customer expect this software to be deployed?</inlineHelpText>
    <label>Expected Deployment Date(Exp May 18)</label>
    <type>Date</type>
</CustomField>