Doc/force-app/main/default/objects/Opportunity/fields/Early_Launch_Open_Intake_Conflicts__c.field-meta.xml
<CustomField>
    <fullName>Early_Launch_Open_Intake_Conflicts__c</fullName>
    <description>Is this customer looking at Intake, Conflicts, or Both?</description>
    <inlineHelpText>Is this customer looking at Intake, Conflicts, or Both?</inlineHelpText>
    <label>Open Intake + Conflicts?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Intake Only</fullName>
            </value>
            <value>
                <fullName>Conflicts Only</fullName>
            </value>
            <value>
                <fullName>Intake + Conflicts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>