Doc/force-app/main/default/objects/Opportunity/fields/Early_Launch_Product_Mgmt_comments__c.field-meta.xml
<CustomField>
    <fullName>Early_Launch_Product_Mgmt_comments__c</fullName>
    <description>To help us assess this deal for a product in early development or early launch, what does Product Management have to say?</description>
    <inlineHelpText>To help us assess this deal for a product in early development or early launch, what does Product Management have to say?</inlineHelpText>
    <label>Product Mgmt comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>