Doc/force-app/main/default/objects/Opportunity/fields/Early_Product_Comments_Services__c.field-meta.xml
<CustomField>
    <fullName>Early_Product_Comments_Services__c</fullName>
    <description>To help us assess deals related to products in early development or early launch, what does Services have to say?

Part of Technical Debt Project: Week 8 fields (Expiring June 1)</description>
    <inlineHelpText>To help us assess deals related to products in early development or early launch, what does Services have to say?</inlineHelpText>
    <label>Services comments (Expiring June 1)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>