Doc/force-app/main/default/objects/Opportunity/fields/Economic_Buyer_lookup__c.field-meta.xml
<CustomField>
    <fullName>Economic_Buyer_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>As per ticket 35243 to have campaign influenced contacts</description>
    <label>Economic Buyer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Economic Buyer)</relationshipLabel>
    <relationshipName>EconomicBuyer</relationshipName>
    <type>Lookup</type>
</CustomField>