Doc/force-app/main/default/objects/Opportunity/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <formula>SBQQ__PrimaryQuote__r.SBQQ__StartDate__c</formula>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>