Doc/force-app/main/default/objects/Opportunity/fields/Emerging_Markets_2HXX_Focus_Account__c.field-meta.xml
<CustomField>
    <fullName>Emerging_Markets_2HXX_Focus_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Emerging Markets 2nd Half Focus Account</description>
    <label>Emerging Markets 2H18 Focus Account</label>
    <type>Checkbox</type>
</CustomField>