Doc/force-app/main/default/objects/Opportunity/fields/Enabled_Timekeeper_Users__c.field-meta.xml
<CustomField>
    <fullName>Enabled_Timekeeper_Users__c</fullName>
    <description>How many Timekeeper users are enabled (not just licensed) in the application today?</description>
    <inlineHelpText>How many Timekeeper users are enabled (not just licensed) in the application today?</inlineHelpText>
    <label>Enabled Timekeeper Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>