Doc/force-app/main/default/objects/Opportunity/fields/Entering_Funnel_Date__c.field-meta.xml
<CustomField>
    <fullName>Entering_Funnel_Date__c</fullName>
    <label>Entering Funnel Date</label>
    <type>Date</type>
</CustomField>