Doc/force-app/main/default/objects/Opportunity/fields/Equity_Partners__c.field-meta.xml
<CustomField>
    <fullName>Equity_Partners__c</fullName>
    <formula>Account.Equity_Partners__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equity Partners</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>