Doc/force-app/main/default/objects/Opportunity/fields/Evaluation_of_Options_Notes__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_of_Options_Notes__c</fullName>
    <label>Evaluation of Options Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>