Doc/force-app/main/default/objects/Opportunity/fields/Evaluation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Start_Date__c</fullName>
    <description>Date the customer begins a specified evaluation period</description>
    <label>Eval Start Date</label>
    <type>Date</type>
</CustomField>