Doc/force-app/main/default/objects/Opportunity/fields/Expression_of_Interest_Notes__c.field-meta.xml
<CustomField>
    <fullName>Expression_of_Interest_Notes__c</fullName>
    <label>Expression of Interest Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>