Doc/force-app/main/default/objects/Opportunity/fields/Firm_has_daily_monthly_hour_targets__c.field-meta.xml
<CustomField>
    <fullName>Firm_has_daily_monthly_hour_targets__c</fullName>
    <description>Does the firm have daily or monthly hour time entry targets for lawyers to meet?

Part of Technical Debt Project: Week 8 fields (Expiring June 1)</description>
    <inlineHelpText>Does the firm have daily or monthly hour time entry targets for lawyers to meet?</inlineHelpText>
    <label>Firm has dly/mthly hour trgts? (Exp Jun1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>