Doc/force-app/main/default/objects/Opportunity/fields/Firm_Maturity_Status_Audit__c.field-meta.xml
<CustomField>
    <fullName>Firm_Maturity_Status_Audit__c</fullName>
    <formula>IF(TEXT(Firm_Maturity_Status__c)=TEXT(Account.Firm_Maturity_Status__c), &quot;Matches&quot;,&quot;Does Not Match&quot;)</formula>
    <label>Firm Maturity Status Audit</label>
    <type>Text</type>
</CustomField>