Doc/force-app/main/default/objects/Opportunity/fields/First_Entered_Pre_Shopping_DateOld__c.field-meta.xml
<CustomField>
    <fullName>First_Entered_Pre_Shopping_DateOld__c</fullName>
    <description>SC-000058: This field is not in use as a result of business decision. Hidden from all page layouts, all profiles and non-reportable. Please do not delete the field without checking with Business Applications team. All workflow rules are now being redirected to use &apos;First Entered Investigation&apos;.</description>
    <label>First Entered Pre-Shopping Date</label>
    <type>Date</type>
</CustomField>