Doc/force-app/main/default/objects/Opportunity/fields/First_Entered_Shopping_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Entered_Shopping_Date__c</fullName>
    <description>This is the date when the opportunity first enters the Shopping for Solution phase.</description>
    <label>First Entered Shopping Date</label>
    <type>Date</type>
</CustomField>