Doc/force-app/main/default/objects/Opportunity/fields/First_Shop_to_Close_or_Today__c.field-meta.xml
<CustomField>
    <fullName>First_Shop_to_Close_or_Today__c</fullName>
    <description>Number of days between First Shop Date and Today for Open Opportunities or Close Date for Closed Opportunities</description>
    <formula>IF( IsClosed, CloseDate- First_Entered_Shopping_Date__c , TODAY()-First_Entered_Shopping_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Shop to Close or Today</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>