Doc/force-app/main/default/objects/Opportunity/fields/Focus_of_Power__c.field-meta.xml
<CustomField>
    <fullName>Focus_of_Power__c</fullName>
    <description>This is the person who has the budget and can approve the spend that we&apos;re asking for.</description>
    <inlineHelpText>This is the person who has the budget and can approve the spend that we&apos;re asking for.</inlineHelpText>
    <label>Focus of Power Text</label>
    <length>200</length>
    <type>Text</type>
</CustomField>