Doc/force-app/main/default/objects/Opportunity/fields/Focus_of_Power_Title__c.field-meta.xml
<CustomField>
    <fullName>Focus_of_Power_Title__c</fullName>
    <formula>AccountId</formula>
    <label>Focus of Power (Title) Expiring Jan 2018</label>
    <type>Text</type>
</CustomField>