Doc/force-app/main/default/objects/Opportunity/fields/Forecast_Category_Actual__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Category_Actual__c</fullName>
    <formula>CASE(RecordTypeId, 
  &quot;01250000000Hd58&quot;, &quot;Renewal&quot;, 
  &quot;01250000000HdeD&quot;, &quot;Adjustment&quot;, 
  &quot;01250000000Hq3W&quot;, &quot;Cancellation&quot;,
  IF(
    IsClosed, 
    CASE(StageName, 
      &quot;Closed Won&quot;, &quot;Closed Won&quot;, 
      &quot;Closed Lost&quot;, &quot;Closed Lost&quot;, 
      &quot;Closed - No Decision&quot;, &quot;Closed - No Decision&quot;, 
      &quot;Other Closed&quot;
    ),
    IF(
      Probability &lt;0.2,
      &quot;Omitted&quot;, 
      IF(
        Probability &lt; 0.35,
        &quot;Pipeline&quot;, 
        IF(
          Probability &lt;0.8,
          &quot;Best Case&quot;, 
          IF(
            Probability &lt;1.0,
            &quot;Commit&quot;,
            IF(
              Probability =1.0,
              &quot;Closed&quot;, 
              &quot;Probability Unknown&quot;
            )
          )
        )
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Category - Actual Exp Dec 2020</label>
    <type>Text</type>
</CustomField>