Doc/force-app/main/default/objects/Opportunity/fields/Forecast_Toggle__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Toggle__c</fullName>
    <formula>IF(
  IsWon,
  &quot;1. Closed Won&quot;,
  CASE(IMF_Upside__c,
    &quot;In Manager Forecast&quot;,&quot;2. In Manager Forecast&quot;,
    &quot;Upside&quot;,&quot;3. Upside&quot;,
    &quot;4. Not in Forecast&quot;
  )
)</formula>
    <label>Forecast Toggle</label>
    <type>Text</type>
</CustomField>