Doc/force-app/main/default/objects/Opportunity/fields/FS_Maintenance_Amount_excluding_Omitted2__c.field-meta.xml
<CustomField>
    <fullName>FS_Maintenance_Amount_excluding_Omitted2__c</fullName>
    <description>This field is for FunnelSource to pull in the recurring amounts listed on all opportunities that have a forecast category GREATER than Omitted</description>
    <formula>if(ISPICKVAL(ForecastCategoryName, &apos;Omitted&apos;), 0, Maintenance_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is for FunnelSource to pull in the recurring amounts listed on all opportunities that have a forecast category GREATER than Omitted</inlineHelpText>
    <label>FS Maintenance Amount excluding Omitted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>