Doc/force-app/main/default/objects/Opportunity/fields/FS_MGR_Forecast_Amount__c.field-meta.xml
<CustomField>
    <fullName>FS_MGR_Forecast_Amount__c</fullName>
    <formula>IF(In_Manager_Forecast__c, Maintenance_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FS MGR Forecast Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>