Doc/force-app/main/default/objects/Opportunity/fields/Fulfilling_Entity__c.field-meta.xml
<CustomField>
    <fullName>Fulfilling_Entity__c</fullName>
    <description>Who is responsible for delivering services to the customer</description>
    <inlineHelpText>Who is responsible for delivering services to the customer? If a partner, is the services contract on Intapp paper or the partner&apos;s paper?</inlineHelpText>
    <label>Fulfilling Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Intapp</fullName>
            </value>
            <value>
                <fullName>Partner - Intapp paper</fullName>
            </value>
            <value>
                <fullName>Partner - Partner paper</fullName>
                <default>true</default>
                <label>Partner - Partner paper</label>
            </value>
            <value>
                <fullName>Partner - Intapp paper (blended)</fullName>
            </value>
            <value>
                <fullName>Self-Installing</fullName>
            </value>
            <value>
                <fullName>To be determined</fullName>
            </value>
            <value>
                <fullName>Intapp NPI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>