Doc/force-app/main/default/objects/Opportunity/fields/FY13_April_Best_Case_Advance_Candidate__c.field-meta.xml
<CustomField>
    <fullName>FY13_April_Best_Case_Advance_Candidate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has this opportunity been flagged to advance in April?</description>
    <inlineHelpText>Has this opportunity been flagged to advance in April?</inlineHelpText>
    <label>FY13 April Best Case Advance Candidate</label>
    <type>Checkbox</type>
</CustomField>