Doc/force-app/main/default/objects/Opportunity/fields/HardwareConfiguration__c.field-meta.xml
<CustomField>
    <fullName>HardwareConfiguration__c</fullName>
    <label>Production Appliance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3/110</fullName>
            </value>
            <value>
                <fullName>3/230</fullName>
            </value>
            <value>
                <fullName>3/440</fullName>
            </value>
            <value>
                <fullName>2 read/2 write</fullName>
            </value>
            <value>
                <fullName>3/100 Limited</fullName>
            </value>
            <value>
                <fullName>Ethical Walls Add-on</fullName>
            </value>
            <value>
                <fullName>ITM Add-on</fullName>
            </value>
            <value>
                <fullName>Unlimited Appliance</fullName>
            </value>
            <value>
                <fullName>Series 4 Upgrade</fullName>
            </value>
            <value>
                <fullName>4 read/4 write</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>