Doc/force-app/main/default/objects/Opportunity/fields/Help_Needed__c.field-meta.xml
<CustomField>
    <fullName>Help_Needed__c</fullName>
    <description>Ticket 26510</description>
    <label>Special Approval Needed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>