Doc/force-app/main/default/objects/Opportunity/fields/High_Confidence_Upside__c.field-meta.xml
<CustomField>
    <fullName>High_Confidence_Upside__c</fullName>
    <description>SC-000044</description>
    <label>High Confidence Upside</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>