Doc/force-app/main/default/objects/Opportunity/fields/How_was_the_outcome_achieved__c.field-meta.xml
<CustomField>
    <fullName>How_was_the_outcome_achieved__c</fullName>
    <label>How was the outcome achieved?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adoption Improved / Value Perceived</fullName>
            </value>
            <value>
                <fullName>Negotiated Billing Pause</fullName>
            </value>
            <value>
                <fullName>Negotiated Financial Concession</fullName>
            </value>
            <value>
                <fullName>Product Issues Resolved</fullName>
            </value>
            <value>
                <fullName>Project Issues Resolved</fullName>
            </value>
            <value>
                <fullName>No Intervention Required</fullName>
                <default>true</default>
                <label>No Intervention Required</label>
            </value>
            <value>
                <fullName>Standard Renewal Play</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>