Doc/force-app/main/default/objects/Opportunity/fields/How_we_lose__c.field-meta.xml
<CustomField>
    <fullName>How_we_lose__c</fullName>
    <description>Changed from &quot;Why do we lose?” to  “Lessons learned from Won/Lost” as per ticket 33469.</description>
    <inlineHelpText>What are the lessons learnt?</inlineHelpText>
    <label>Lessons learned from Won/Lost</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>