Doc/force-app/main/default/objects/Opportunity/fields/Identified_Pain__c.field-meta.xml
<CustomField>
    <fullName>Identified_Pain__c</fullName>
    <description>Freshdesk Ticket# 29629</description>
    <inlineHelpText>What business pain/need is driving the customer to change? Pain is MEASURABLE and HAS A TIME LINE.</inlineHelpText>
    <label>Identified Pain</label>
    <type>TextArea</type>
</CustomField>