Doc/force-app/main/default/objects/Opportunity/fields/If_No_Business_Case_Delivered_why__c.field-meta.xml
<CustomField>
    <fullName>If_No_Business_Case_Delivered_why__c</fullName>
    <label>If &quot;No&quot; Business Case Delivered, why?</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>