Doc/force-app/main/default/objects/Opportunity/fields/Implementation_Plan__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Plan__c</fullName>
    <description>Describe who will implement the project and any potential obstacles to implementation</description>
    <inlineHelpText>Describe who will implement the project and any potential obstacles to implementation</inlineHelpText>
    <label>Implementation Plan</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>