Doc/force-app/main/default/objects/Opportunity/fields/In_Contract_Notes__c.field-meta.xml
<CustomField>
    <fullName>In_Contract_Notes__c</fullName>
    <label>In Contract Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>