Doc/force-app/main/default/objects/Opportunity/fields/In_Manager_Forecast__c.field-meta.xml
<CustomField>
    <fullName>In_Manager_Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In  Manager Forecast</label>
    <type>Checkbox</type>
</CustomField>