Doc/force-app/main/default/objects/Opportunity/fields/In_Manager_Forecast_Number__c.field-meta.xml
<CustomField>
    <fullName>In_Manager_Forecast_Number__c</fullName>
    <label>In Manager Forecast Number</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>