Doc/force-app/main/default/objects/Opportunity/fields/In_Obtain_Contract__c.field-meta.xml
<CustomField>
    <fullName>In_Obtain_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Obtain Contract?</label>
    <type>Checkbox</type>
</CustomField>