Doc/force-app/main/default/objects/Opportunity/fields/Include_in_Evaluation_Report__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Evaluation_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Display this opportunity in Evaluation Calendar?

Part of Technical Debt Project: Week 5 fields (Expiring May 11)</description>
    <label>Include in Eval Report (Expiring May 11)</label>
    <type>Checkbox</type>
</CustomField>