Doc/force-app/main/default/objects/Opportunity/fields/Initial_Software_Term_Length_Months__c.field-meta.xml
<CustomField>
    <fullName>Initial_Software_Term_Length_Months__c</fullName>
    <inlineHelpText>Please populate the initial term length in months. For a standard deal, this should say 12. For non standard deals, add the additional months in. For example, if you are providing an additional 2 months to the initial term, populate 14 in this field.</inlineHelpText>
    <label>Initial Software Term Length (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>