Doc/force-app/main/default/objects/Opportunity/fields/Initiating_Department__c.field-meta.xml
<CustomField>
    <fullName>Initiating_Department__c</fullName>
    <description>This is the most senior person who has the business problem and needs it solved.</description>
    <inlineHelpText>This is the most senior person who has the business problem and needs it solved.</inlineHelpText>
    <label>Focus of Dissatisfaction Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1) Partner / PGL / MP</fullName>
            </value>
            <value>
                <fullName>2) COO</fullName>
            </value>
            <value>
                <fullName>3) CFO</fullName>
            </value>
            <value>
                <fullName>4) GC</fullName>
            </value>
            <value>
                <fullName>5) CIO</fullName>
            </value>
            <value>
                <fullName>6) Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>